# nagger

./: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.md  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  build.mk  requirements_dev.txt  setup.cfg  setup.py  tox.ini
nagger/: __init__.py  ci_bot.py  cli.py  ensure.py  gitlab.py  logs.py  oauth.py  release.py  valid.py
nagger/templates/: external.md  homepage.md  internal.md  issue_tree.md  mermaid_chart.md  project.release.md  project.tag.txt  wiki.md
tests/: __init__.py  test_nagger.py
