[metadata]
version = 0.2.1
name = nagger
url = https://gitlab.com/ModioAB/nagger
author = D.S. Ljungmark
author_email = spider@skuggor.se
classifiers = 
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
description = GitLab MR Nagger
license = GNU General Public License v3
long_description = file: README.md
keywords = nagger

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88

[aliases]

[options]
install_requires = 
	python-gitlab >= 2.1.2
	requests
	oauthlib
	structlog >= 20.1
	colorama
	python-dateutil
	click >= 7.1
	Jinja2
include_package_data = True
packages = find:
zip_safe = True

[options.package_data]
nagger = templates/*.*

[options.entry_points]
console_scripts = 
	nagger = nagger.cli:cli


[tool:pytest]
addopts = --cov=nagger --cov-report=term --cov-report=xml  --junitxml=testreport.xml
junit_family = xunit2
